Name: HDBC
Version: 3.0.0
License: BSD3
Maintainer: Nicolas Wu <nicolas.wu@gmail.com>
Author: John Goerzen
homepage: https://github.com/hdbc/hdbc
Copyright: Copyright (c) 2005-2011 John Goerzen
license-file: LICENSE
extra-source-files: LICENSE, README.md
Category: Database
synopsis: Haskell Database Connectivity
Description: HDBC provides an abstraction layer between Haskell programs and SQL
 relational databases. This lets you write database code once, in
 Haskell, and have it work with any number of backend SQL databases
 (MySQL, Oracle, PostgreSQL, ODBC-compliant databases, etc.)

Stability: Stable
Build-Type: Simple

Cabal-Version: >=1.8

source-repository head
  type:            git
  location:        https://github.com/hdbc/hdbc.git


library

  Build-Depends: base>=3 && <5
               , Decimal >= 0.2.1
               , attoparsec
               , blaze-builder
               , bytestring
               , deepseq
               , old-locale
               , text
               , time >=1.1.2.4 && <=1.5
               , uuid >= 1.0.0

  -- Hack for cabal-install weirdness.  cabal-install forces base 3,
  -- though it works fine for Setup.lhs manually.  Fix.
  if impl(ghc >= 6.9)
     build-depends: base >= 4

  GHC-Options: -Wall -fno-warn-orphans
  ghc-prof-options: -fprof-auto

  Exposed-Modules: Database.HDBC
                 , Database.HDBC.DriverUtils
                 , Database.HDBC.SqlValue
                 , Database.HDBC.Types
                 , Database.HDBC.Formaters
                 , Database.HDBC.Parsers

Test-Suite sqlvalues
  Type:             exitcode-stdio-1.0
  Main-Is:          testsrc/sqlvalues.hs
  other-modules: Database.HDBC
  GHC-Options: -Wall -main-is SqlValues -fno-warn-orphans
  ghc-prof-options: -fprof-auto
  Build-Depends:    base >= 4
                  , Decimal >= 0.2.1
                  , HUnit
                  , QuickCheck
                  , attoparsec
                  , blaze-builder
                  , bytestring
                  , deepseq
                  , old-locale
                  , quickcheck-assertions
                  , quickcheck-instances
                  , test-framework
                  , test-framework-hunit
                  , test-framework-quickcheck2
                  , text
                  , time >=1.1.2.4 && <=1.5
                  , uuid >= 1.0.0


Test-Suite dummydriver
  Type:             exitcode-stdio-1.0
  Main-Is:          testsrc/dummydriver.hs
  other-modules: Database.HDBC
               , Database.HDBC.DriverUtils
  GHC-Options: -Wall -main-is DummyDriver -fno-warn-orphans
  ghc-prof-options: -fprof-auto
  Build-Depends:    base
                  , Decimal >= 0.2.1
                  , HUnit
                  , attoparsec
                  , blaze-builder
                  , bytestring
                  , deepseq
                  , hspec-expectations
                  , old-locale
                  , test-framework
                  , test-framework-hunit
                  , text
                  , time >=1.1.2.4 && <=1.5
                  , uuid >= 1.0.0
